--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
   <script type="importmap">
 {
   "imports": {
+    "react/jsx-runtime": "https://esm.sh/react@^19.2.4/jsx-runtime",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",what can we adopt from the below style
+    "react": "https://esm.sh/react@^19.2.4",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.4/client",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.4",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "@tailwindcss/vite": "https://esm.sh/@tailwindcss/vite@^4.1.18",
-    "react-dom": "https://esm.sh/react-dom@^19.2.4"
+    "@tailwindcss/vite": "https://esm.sh/@tailwindcss/vite@^4.1.18"
   }
 }
 </script>
