--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio | Senior Product Designer</title>
+    <title>Ramanadesign.tech | Senior Product Designer</title>
+    <meta name="description" content="Portfolio of a Senior Product Designer & Technologist specializing in calm interactive systems and technical clarity." />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ramanadesign.tech/" />
+    <meta property="og:title" content="Ramanadesign.tech | Senior Product Designer" />
+    <meta property="og:description" content="Specializing in calm interactive systems and technical clarity." />
+    <meta property="og:image" content="https://ramanadesign.tech/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://ramanadesign.tech/" />
+    <meta property="twitter:title" content="Ramanadesign.tech | Senior Product Designer" />
+    <meta property="twitter:description" content="Specializing in calm interactive systems and technical clarity." />
+    <meta property="twitter:image" content="https://ramanadesign.tech/og-image.jpg" />
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>◼️</text></svg>">
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=IBM+Plex+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&family=IBM+Plex+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script type="importmap">
 {
   "imports": {
